kube.yaml
kind: Namespace
apiVersion: v1
metadata:
  name: providence
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: cert-parser
  namespace: providence
  labels:
    app: cert-parser
spec:
  replicas: 1
  selector:
    matchLabels:
      app: cert-parser
  template:
    metadata:
      annotations:
         cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: cert-parser
    spec:
      containers:
        - name: cert-parser
          image: as207960/providence-parser:1
          imagePullPolicy: IfNotPresent
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: api
  namespace: providence
  labels:
    app: api
spec:
  replicas: 1
  selector:
    matchLabels:
      app: api
  template:
    metadata:
      annotations:
         cni.projectcalico.org/ipv6pools: "[\"default-ipv6-ippool\"]"
      labels:
        app: api
    spec:
      containers:
        - name: api
          image: as207960/providence-api:1
          imagePullPolicy: IfNotPresent
          ports:
            - containerPort: 8000
          livenessProbe:
            httpGet:
              path: /pingu
              port: 8080
            initialDelaySeconds: 3
            periodSeconds: 3
---
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: api
  namespace: providence
spec:
  podSelector:
    matchLabels:
      app: api
  policyTypes:
  - Ingress
  ingress:
  - from:
    - podSelector: {}
    - namespaceSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
      podSelector:
        matchLabels:
          app.kubernetes.io/name: ingress-nginx
    ports:
    - protocol: TCP
      port: 8000
---
apiVersion: v1
kind: Service
metadata:
  name: api
  namespace: providence
  labels:
    app: api
spec:
  selector:
    app: api
  ports:
    - port: 8000
      targetPort: 8000
      name: rocket
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: api
  namespace: providence
  annotations:
    nginx.ingress.kubernetes.io/proxy-body-size: "0"
    cert-manager.io/cluster-issuer: letsencrypt
    nginx.ingress.kubernetes.io/rewrite-target: /$2
spec:
  tls:
    - hosts:
        - providence.as207960.net
      secretName: api-tls
  rules:
  - host: providence.as207960.net
    http: &http
      paths:
      - path: /api(/|$)(.*)
        pathType: Prefix
        backend:
          service:
            name: api
            port:
              number: 8000
